deploy.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: my-ns

---

apiVersion: v1
kind: Pod
metadata:
  namespace: my-ns
  name: my-pod
  labels:
    app: my-app
spec:
  containers:
  - name: server
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      capabilities:
        drop:
        - ALL
      seccompProfile:
        type: RuntimeDefault
    image: quay.io/jhernand/dummy:latest
    imagePullPolicy: Always
    command:
    - /usr/local/bin/dummy
    ports:
    - containerPort: 8443

---

apiVersion: v1
kind: Service
metadata:
  namespace: my-ns
  name: my-service
spec:
  selector:
    app: my-app
  ports:
  - name: my-port
    protocol: TCP
    port: 8443
    targetPort: 8443

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: my-ns
  name: my-route
spec:
  port:
    targetPort: my-port
  tls:
    termination: reencrypt
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFgTCCA2mgAwIBAgIUdxRaoy5YrUdH6DOXCqrt+417vKQwDQYJKoZIhvcNAQEL
[...]
      fWTzUCEP6tO958N2HQPKrhOuUDFx
      -----END CERTIFICATE-----
  to:
    kind: Service
    name: my-service
